--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit BusIO@^1.14.1
+	adafruit/Adafruit GFX Library@^1.11.3
